[tool.poetry]
name = "rwp-example"
version = "0.1.0"
description = ""
authors = ["Richard Anton <ranton@ranton.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
urllib3 = "^2.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
flake8 = "^7.0.0"
flake8-unused-arguments = "^0.0.13"
isort = "^5.13.2"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
